--- a/_config.yml
+++ b/_config.yml
@@ -67,88 +67,88 @@ content:
         sub_title: Software Engineer
         caption: 2014.05 ~ 현재
         description: | # this will include new lines to allow paragraphs
-          **Naver Shopping**ㆍ[*https://shopping.naver.com*](https://shopping.naver.com)ㆍ<small>(Feb 2022 – Present)</small><br>
-          - Developed product APIs for a new Quick Commerce service and established layer architecture and testing code conventions within the development task force.<br>
-          ㆍ Background: Ambiguous module responsibilities due to indiscriminate inter-layer calls and frequent regressions caused by a lack of test codes.<br>
-          ㆍ Actions<br>
-          ㅤㅤㆍRefined and formalized clear separation of responsibilities between layers, establishing team-wide development standards.<br>
-          ㅤㅤㆍIntegrated ArchUnit-based fitness functions into the CI pipeline to automatically detect dependency violations.<br>
-          ㅤㅤㆍAuthored unit test guidelines and provided sample codes to facilitate easy adoption among team members.<br>
-          ㅤㅤㅤㆍEnhanced code quality and maintainability.<br>
-          ㅤㅤㆍDemonstrated leadership by coordinating regular scrums with the product ingestion team, client (Front-End) team, and planning/design teams.<br>
-          ㆍ Outcome: Successfully drove prioritization and scheduling efforts to achieve stable feature deliveries within deadlines.<br>
+          **네이버 쇼핑**ㆍ[*https://shopping.naver.com*](https://shopping.naver.com)ㆍ<small>(2022.02~현재)</small><br>
+          - 신규 서비스(퀵커머스) 상품 API 개발 및 개발 TF 내 레이어 아키텍처/테스트 코드 컨벤션 정립<br>
+          ㆍ 배경 : 무분별한 레이어 간 호출로 인해 모듈 책임이 모호해지고, 테스트 코드 부재로 인한 잦은 리그레션 필요<br>
+          ㆍ 진행<br>
+          ㅤㅤㆍ레이어 아키텍처 정립 : 각 레이어간 명확한 책임 분리를 리팩토링 및 제안하고 팀 내 개발 컨벤션 확립<br>
+          ㅤㅤㆍArchUnit 기반 피트니스 함수를 CI 파이프라인에 연동, 레이어 간 의존성 위반 자동 검증<br>
+          ㅤㅤㆍ테스트 코드 작성 가이드 : unit test best practice를 문서화, 팀원이 쉽게 적용할 수 있도록 샘플 코드 제공<br>
+          ㅤㅤㅤㆍ코드 품질 향상 및 유지보수 용이성 확보<br>
+          ㅤㅤㆍ리더십 및 협업 : 상품 원본 수신팀, 클라이언트(Front-End)팀, 기획/디자인 부서 등과 주기적인 스크럼 진행<br>
+          ㆍ 결과 : 우선순위 설정과 일정 조율을 주도해 신규 기능을 마감일 내 안정적으로 배포<br>
           <div style="height: 0.5em;"></div>
           
-          - Built a real-time monitoring system to handle large-scale traffic and accelerate incident response during Fashion Town service operations.<br>
-          ㆍ Background: Manual log analysis caused incident response delays of over 5 minutes.<br>
-          ㆍ Actions<br>
-          ㅤㅤㆍEstablished a real-time traffic monitoring system by collecting Nginx VTS and Prometheus metrics and visualizing them with Grafana dashboards.<br>
-          ㅤㅤㆍApplied Nginx Rate Limit configurations (validated through dry_run) to block abnormal traffic and maintain system performance.<br>
-          ㅤㅤㆍVisualized application metrics (e.g., response time, DB query speed) to detect and prioritize bottleneck resolutions.<br>
-          ㆍ Outcome: Cut incident detection and response time from over 5 minutes to within 1 minute.<br>
+          - 패션타운 서비스 운영 간 대규모 트래픽 처리 & 장애 대응을 위한 실시간 모니터링 시스템 구축<br>
+          ㆍ 배경 : 장애 상황 발생 시 로그 분석 기반 수동 대응으로 평균 5분 이상의 장애 대응이 지연됨<br>
+          ㆍ 진행<br>
+          ㅤㅤㆍNginx VTS 모듈 + Prometheus로 메트릭 수집 → Grafana 대시보드에서 실시간 트래픽 분석 체계 구축<br>
+          ㅤㅤㆍNginx Rate Limit 설정(dry_run 적용 후 안정적인 적용)으로 비정상 트래픽 차단 및 성능 저하 방지<br>
+          ㅤㅤㆍApplication 메트릭(응답 시간, DB 쿼리 속도 등)을 시각화하여 병목 구간 우선 개선<br>
+          ㆍ 결과 : peak traffic 알림 수신 및 로그를 통합 분석하여 장애 원인 파악 및 대응 시간 단축(5분 → 1분 이내)<br>
           <div style="height: 0.5em;"></div>
           
-          - Directed the development of the Product Standardization ('Group Product') service and architected the data pipeline.<br>
-          ㆍ Background: Different options of the same product were separately registered, decreasing search accuracy and causing user confusion.<br>
-          ㆍ Actions<br>
-          ㅤㅤㆍOptimized duplicate elimination and filtering/paging performance by utilizing ElasticSearch collapse queries.<br>
-          ㅤㅤㆍImplemented logic to prioritize and display a representative product within each group according to sort policies.<br>
-          ㅤㅤㆍDesigned the ingestion data pipeline between MongoDB and ElasticSearch and oversaw the migration.<br>
-          ㅤㅤㆍValidated system performance against TPS targets through load testing and optimized query strategies.<br>
-          ㅤㅤㆍCollaborated closely with the product ingestion and QA teams to detect and resolve data quality issues.<br>
-          ㆍ Outcome<br>
-          ㅤㅤㆍTook ownership of task management, schedule control, and risk mitigation to ensure the project's on-time completion.<br>
-          ㅤㅤㆍReduced the operational workload for product consultants.<br>
+          - 상품 표준화(‘그룹상품’ 서비스) 개발 및 데이터 파이프라인 설계<br>
+          ㆍ 배경 : 동일 상품의 여러 옵션이 각각 다른 상품으로 등록되어 검색 정확도가 낮고, 사용자 혼란 유발<br>
+          ㆍ 진행<br>
+          ㅤㅤㆍElasticSearch의 collapse 쿼리를 활용해 그룹상품 단위로 중복 제거, 필터링·페이징 시 처리 성능 최적화<br>
+          ㅤㅤㆍ정렬별 우선순위 정책에 맞춰 그룹 내 대표 상품 노출 로직 구현<br>
+          ㅤㅤㆍMongoDB와 ElasticSearch 간 상품 수신 데이터 파이프라인 설계 및 마이그레이션 주도<br>
+          ㅤㅤㆍ부하 테스트로 목표 TPS 기준 성능 검증 후 쿼리 질의 전략 개선<br>
+          ㅤㅤㆍ상품 데이터 수신팀, QA 조직과 협의하여 누락 데이터·품질 이슈 발견 및 조치 플랜 마련<br>
+          ㆍ 결과<br>
+          ㅤㅤㆍ과제 리딩 및 일정 관리, 리스크 식별을 주도하여 프로젝트를 기한 내 완료<br>
+          ㅤㅤㆍ운영 인원(컨설턴트)의 상품 관리 작업 시간 단축<br>
           <div style="height: 0.5em;"></div>
           
-          - Formulated a failure recovery strategy and introduced Chaos Engineering to enhance service resilience.<br>
-          ㆍ Background: Needed to establish recovery scenarios and simulate failure conditions before service launch.<br>
-          ㆍ Actions<br>
-          ㅤㅤㆍApplied Fallback Cache (Redis) to mitigate empty response issues during external delays.<br>
-          ㅤㅤㆍSimulated delayed responses and network faults using Toxiproxy to verify retry and recovery mechanisms.<br>
-          ㆍ Outcome<br>
-          ㅤㅤㆍIdentified and corrected fallback cache switching flaws during testing, achieving 100% success rate.<br>
-          ㅤㅤㆍRecorded zero critical incidents over six months post-launch, maintaining 99.99% SLA compliance.<br>
+          - 신규 서비스 안정성을 위한 장애 복구 전략 수립 및 Chaos Engineering 도입<br>
+          ㆍ 배경 : 서비스 출시 전 장애 복구 시나리오 마련 및 실제 환경에서의 실패 상황 시뮬레이션 목표<br>
+          ㆍ 진행<br>
+          ㅤㅤㆍ외부 응답 지연 시 Fallback Cache(Redis) 적용으로 빈 응답 문제 해소<br>
+          ㅤㅤㆍToxiproxy를 통한 응답 지연/네트워크 장애 재현, 재시도·연결 복구 로직 검증<br>
+          ㆍ 결과<br>
+          ㅤㅤㆍ테스트 과정에서 Fallback Cache 전환 실패 결함 발견 → 로직 수정 후 성공률 100% 달성<br>
+          ㅤㅤㆍ서비스 출시 후 6개월간 치명적 장애 0건 기록, SLA(99.99%) 준수<br>
           <div style="height: 0.5em;"></div>
           
-          - Architected a high-availability data pipeline to process large-scale real-time user events.<br>
-          ㆍ Background: Needed to support behavior-based personalized product recommendations and real-time ranking/feed services.<br>
-          ㆍ Actions<br>
-          ㅤㅤㆍStreamed and processed user behavior events in real-time with Kafka and integrated them with the recommendation system.<br>
-          ㅤㅤㆍMigrated from hourly batch-based rankings to near-real-time ranking calculations using Redis, enhancing data freshness.<br>
-          ㆍ Outcome: Contributed to a 10% increase in page views after service launch.<br>
+          - 대규모 실시간 유저 이벤트 처리를 위한 고가용성 데이터 파이프라인 구축<br>
+          ㆍ 배경 : 유저 행동 기반 개인화 상품 추천 및 실시간 랭킹/피드 서비스 구현<br>
+          ㆍ 진행<br>
+          ㅤㅤㆍKafka 기반 실시간 스트리밍 데이터 처리로 사용자 이벤트를 분석 및 추천 시스템 연계<br>
+          ㅤㅤㆍ기존 배치 기반 랭킹 시스템(1시간 단위) → Redis를 활용하여 준 실시간 랭킹 계산 (최신성 개선)<br>
+          ㆍ 결과 : 서비스 론칭 후 Page View 10% 상승 기여<br>
           <div style="height: 1em;"></div>
           
-          **V Live**ㆍ[*http://www.vlive.tv*](http://www.vlive.tv/)ㆍ<small>(Aug 2018 – Feb 2022)</small><br>
-          - Improved broadcast notification speed ([*Related blog*](https://taetaetae.github.io/2019/01/02/faster-parallel-processes/))<br>
-          ㆍ Background: Slow notifications disrupted communication between stars and fans and reduced broadcast viewership.<br>
-          ㆍ Actions<br>
-          ㅤㅤㆍParticipated end-to-end in diagnosing issues, planning, designing, implementing, and deploying optimizations in three phases.<br>
-          ㅤㅤㆍRefined target retrieval methods and enhanced RabbitMQ-based parallel processing.<br>
-          ㅤㅤㆍReduced Redis load and increased processing throughput by implementing key partitioning to avoid duplicate sends.<br>
-          ㆍ Outcome<br>
-          ㅤㅤㆍBoosted broadcast notification performance for 10 million users (reduced from 11 minutes → 30 seconds), achieving 95% system improvement.<br>
-          ㅤㅤㆍExpanded business models through notification services and launched the new "News Update" feature.<br>
-          - Headed a major architectural transformation from Monolithic to MSA to strengthen scalability and fault tolerance.<br>
-          ㆍ Adopted Event-Driven Architecture (EDA), Circuit Breakers, and service modularization to enable system resilience.<br>
-          ㆍ Implemented Kubernetes-based orchestration to enhance deployment flexibility.<br>
-          - Served as Head of Search and Feed, driving service stabilization and designing an event-driven architecture for the search/feed system.<br>
-          - Advanced CI/CD automation and code quality through the introduction of SonarQube static analysis and online code reviews ([*Related blog*](https://taetaetae.github.io/2018/02/08/jenkins-sonar-github-integration/))<br>
-          - Ensured service continuity and minimized deployment risks by implementing non-disruptive batch deployments ([*Related blog*](https://taetaetae.github.io/2019/10/13/batch-nondisruptive-deploy/))<br>
+          **V Live**ㆍ[*http://www.vlive.tv*](http://www.vlive.tv/)ㆍ<small>(2018.08~2022.02)</small><br>
+          - 방송 알림 속도 개선 ([*관련 블로깅*](https://taetaetae.github.io/2019/01/02/faster-parallel-processes/))<br>
+          ㆍ 배경 : 느린 알림속도로 스타와 팬간의 소통 단절 및 방송 시청률 저하<br>
+          ㆍ 진행<br>
+          ㅤㅤㆍ기존 프로세스의 문제점 도출, 플래닝 및 설계, 구현 등 전 과정 참여 및 3단계에 걸친 단계적 배포<br>
+          ㅤㅤㆍ발송 대상 조회방식 변경하고 메시지 큐(RabbitMQ) 병렬처리 방식을 개선하여 속도 개선<br>
+          ㅤㅤㆍ중복 발송을 제어하기 위한 Redis 키 파티셔닝을 통해 Redis 부하 감소 및 프로세스 속도 증가<br>
+          ㆍ 결과<br>
+          ㅤㅤㆍ1,000만 사용자 대상 방송 알림 속도 개선(11분 → 30초)으로 푸시 알림 시스템 성능 95% 향상<br>
+          ㅤㅤㆍ알림 기능을 활용한 비즈니스 모델 다각화 및 신규 기능(새소식) 출시<br>
+          - 서비스 전면 개편: Monolithic → MSA 구조 전환 으로 확장성 및 장애 대응력 강화<br>
+          ㆍ EDA 도입, Circuit Breaker, 모듈 분리를 적용하여 마이크로서비스 간 결합도를 낮추고 장애 격리 가능하도록 설계<br>
+          ㆍ Kubernetes 기반 컨테이너 오케스트레이션 도입으로 배포 유연성 확보<br>
+          - 검색/피드 파트장 역임 : 서비스 안정화 및 이벤트 기반의 검색/피드 시스템 설계<br>
+          - CI/CD 자동화 및 코드 품질 개선을 위한 정적 분석 도구(SonarQube) 및 온라인 코드 리뷰 도입 ([*관련 블로깅*](https://taetaetae.github.io/2018/02/08/jenkins-sonar-github-integration/))<br>
+          - Batch 무중단 배포 적용을 통해 서비스 연속성 유지 및 장애 최소화 ([*관련 블로깅*](https://taetaetae.github.io/2019/10/13/batch-nondisruptive-deploy/))<br>
           <div style="height: 1em;"></div>
           
-          **Naver Pay Card Direct Affiliation System (Payment Gateway)**ㆍ<small>(Apr 2016 – Aug 2018)</small><br>
-          - Built the initial project environment including CI/CD pipelines, build/deployment systems, and server infrastructure.<br>
-          - Created a business-wide monitoring system based on the Elastic Stack for automated anomaly detection ([*Related blog*](https://d2.naver.com/helloworld/3585246))<br>
-          - Developed a real-time anomaly detection system to monitor and automatically respond to irregular transaction patterns ([*Related blog*](https://taetaetae.github.io/2018/05/31/anomaly-detection/))<br>
-          - Strengthened the reliability of payment systems by adopting distributed tracing for transaction and performance monitoring.<br>
+          **네이버페이 카드 직가맹 시스템 (Payment Gateway)**ㆍ<small>(2016.04~2018.08)</small><br>
+          - 프로젝트 초기 환경 셋팅 (빌드/배포 파이프라인 구축, CI/CD 설계, 서버 및 인프라 구성)<br>
+          - Elastic Stack 기반 비즈니스 통합 모니터링 시스템 구축으로 서비스 장애 감지 및 이상 탐지 자동화 ([*관련 블로깅*](https://d2.naver.com/helloworld/3585246))<br>
+          - 거래비 하락 모니터링 시스템 구축을 통해 비정상 거래 패턴 자동 감지 및 대응 시스템 마련 ([*관련 블로깅*](https://taetaetae.github.io/2018/05/31/anomaly-detection/))<br>
+          - 트랜잭션 추적 및 성능 모니터링을 위한 분산 트레이싱 도입으로 결제 시스템 안정성 강화<br>
           <div style="height: 1em;"></div>
           
-          **Naver Weather**ㆍ[*https://weather.naver.com*](https://weather.naver.com/)ㆍ<small>(May 2014 – Apr 2016)</small><br>
-          - Developed a monitoring tool to validate and ensure the integrity of incoming CP (Content Provider) weather data.<br>
-          - Migrated data collection processes from crontab to Spring Batch and Jenkins, visualizing and automating data workflows.<br>
-          - Established a logging system for the data pipeline to detect anomalies and resolve data processing delays.<br>
-          - Ideated and prototyped a map-based weather service, later incorporated into production services.<br>
+          **네이버 날씨**ㆍ[*https://weather.naver.com*](https://weather.naver.com/)ㆍ<small>(2014.05~2016.04)</small><br>
+          - CP사 수신 데이터 모니터링 툴 개발로 데이터 정합성 검증 및 장애 감지 자동화<br>
+          - Crontab 기반 데이터 수집을 Spring Batch 및 Jenkins로 전환하여 데이터 흐름 시각화 및 운영 자동화<br>
+          - 데이터 파이프라인 로깅 체계 구축으로 이상 데이터 탐지 및 처리 지연 문제 개선<br>
+          - 지도 기반 날씨 서비스 아이데이션 및 프로토타이핑 → 향후 서비스에 적용<br>
   
       - layout: top-left
         title: NHN Technology Services
